# NDSS2026-WBSLT

./: Dockerfile  LICENSE  README.md  requirements.txt  setup.sh
E1-SLT-Application/: run-e1.sh  run-get-results.sh
E1-SLT-Application/WBSLT-SLT/: slt.py
E1-SLT-Application/WBSLT-SLT/include/: slt.h  wbaes.h
E1-SLT-Application/WBSLT-SLT/src/: slt.c  wbaes.c
E1-SLT-Application/WBSLT-SLT/test/: main.c
E2-AES-Performance/: aes.py  run-e2.sh  run-get-results.sh
E2-AES-Performance/CEJO-whitebox-AES-master/src/: wbaes.c
E2-AES-Performance/CEJO-whitebox-AES-master/test/: main.c
E2-AES-Performance/Improved-Masking-for-White-box-AES-main/include/: wbaes.h
E2-AES-Performance/Improved-Masking-for-White-box-AES-main/src/: wbaes.c
E2-AES-Performance/Improved-Masking-for-White-box-AES-main/test/: main.c
E2-AES-Performance/Table-Redundancy-Method-for-White-box-AES-master/include/: wbaes.h
E2-AES-Performance/Table-Redundancy-Method-for-White-box-AES-master/test/: main.c
E4-Attack-Resistance/: run-e4.sh  run-get-results.sh
E4-Attack-Resistance/BGE/: main.py  run.sh
E4-Attack-Resistance/BS/: main.py  run.sh
E4-Attack-Resistance/DCA/: main.py  run.sh
E4-Attack-Resistance/DCA/HO-DCA-main/data_dependency_on_SEL_masking/d_1/: CMakeLists.txt
E4-Attack-Resistance/DCA/HO-DCA-main/data_dependency_on_SEL_masking/d_1/include/: wbaes.h
E4-Attack-Resistance/DCA/HO-DCA-main/data_dependency_on_SEL_masking/d_1/src/: wbaes.c
E4-Attack-Resistance/DFA/: main.py  run.sh
E4-Attack-Resistance/LRDRP/: main.py  run.sh
E4-Attack-Resistance/MGH/: main.py  run.sh
(+55 files in other folders)
